# mission-clearance

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
config/: chain_evaluation_prompt.txt  default-delegation-policies.toml  default-policies.toml  default.toml
crates/mc-adapters/: Cargo.toml
crates/mc-adapters/src/: db.rs  http.rs  lib.rs  shell.rs  tool_call.rs
crates/mc-api/: Cargo.toml
crates/mc-api/src/: auth.rs  lib.rs  state.rs
crates/mc-api/src/routes/: missions.rs  mod.rs  operations.rs  org.rs  permissions.rs  policies.rs  principals.rs  roles.rs  trace.rs  vault.rs
crates/mc-cli/: Cargo.toml
crates/mc-cli/src/: main.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: capability.rs  delegation.rs  id.rs  lib.rs  mission.rs  operation.rs  org.rs  policy.rs  principal.rs  resource.rs  role.rs  trace.rs  vault.rs
crates/mc-graph/: Cargo.toml
crates/mc-graph/src/: cache.rs  chain.rs  chain_llm.rs  delegation_engine.rs  lib.rs  resolver.rs  revocation.rs  store.rs
crates/mc-identity/: Cargo.toml
crates/mc-identity/src/: api_key.rs  composite.rs  lib.rs  mission_token.rs  oidc.rs  provider.rs  scim.rs
crates/mc-integration-tests/: Cargo.toml
crates/mc-integration-tests/tests/: integration_tests.rs  test_advanced_attacks.rs  test_bypass_round2.rs  test_bypass_scenarios.rs  test_content_analyzer.rs  test_feedback_loop.rs  test_prompt_injection_gaps.rs
crates/mc-kernel/: Cargo.toml
crates/mc-kernel/src/: checker.rs  classifier.rs  content_analyzer.rs  lib.rs  manager.rs  pipe_chain.rs  session_tracker.rs  signal_enricher.rs
crates/mc-policy/: Cargo.toml
crates/mc-policy/src/: deterministic.rs  feedback.rs  human.rs  lib.rs  llm_judge.rs  pipeline.rs  taint.rs
crates/mc-sdk/: Cargo.toml
crates/mc-sdk/src/: client.rs  embedded.rs  lib.rs
crates/mc-trace/: Cargo.toml
crates/mc-trace/src/: event_log.rs  graph.rs  lib.rs  query.rs
crates/mc-vault/: Cargo.toml
crates/mc-vault/src/: crypto.rs  lib.rs  rotation.rs  store.rs
docs/: architecture.html  commands.html  configuration.html  detection.html  index.html  style.css
docs/plans/: 2026-03-01-mission-clearance-design.md  2026-03-01-mission-clearance-impl-plan.md
tests/: test_claude_e2e.py  test_hook_expansion_e2e.py
