[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nickkopylov/mission-clearance"
homepage = "https://github.com/nickkopylov/mission-clearance"
authors = ["Mission Clearance Contributors"]
keywords = ["ai-safety", "permissions", "capabilities", "agent", "security"]
categories = ["authentication", "command-line-utilities"]
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
