[package]
name = "mission-clearance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "CLI for Mission Clearance autonomous agent permission system"

[features]
default = []
feedback-loop = ["mc-policy/feedback-loop", "mc-api/feedback-loop"]

[[bin]]
name = "mission-clearance"
path = "src/main.rs"

[dependencies]
mc-core = { path = "../mc-core" }
mc-kernel = { path = "../mc-kernel" }
mc-policy = { path = "../mc-policy" }
mc-vault = { path = "../mc-vault" }
mc-trace = { path = "../mc-trace" }
mc-adapters = { path = "../mc-adapters" }
mc-api = { path = "../mc-api" }
mc-sdk = { path = "../mc-sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
axum = { version = "0.8" }
uuid.workspace = true
