[package]
name = "mc-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
description = "Integration tests for Mission Clearance"

# This crate exists solely for integration tests.
# It has no library or binary targets.

[features]
default = []
feedback-loop = ["mc-policy/feedback-loop", "mc-sdk/feedback-loop", "mc-api/feedback-loop"]

[dev-dependencies]
mc-sdk = { path = "../mc-sdk" }
mc-core = { path = "../mc-core" }
mc-kernel = { path = "../mc-kernel" }
mc-policy = { path = "../mc-policy" }
mc-api = { path = "../mc-api" }
mc-vault = { path = "../mc-vault" }
mc-trace = { path = "../mc-trace" }
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
