[package]
name = "mc-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
mc-core = { path = "../mc-core" }
mc-trace = { path = "../mc-trace" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
