[package]
name = "mc-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Multi-stage policy pipeline for Mission Clearance"

[features]
default = []
## Enable the adaptive feedback loop.
##
## WARNING: This feature spawns `claude --dangerously-skip-permissions` as a
## sub-process and may rebuild + exec() into a new binary at runtime.  It is
## intended **only** for local development experimentation.  NEVER enable this
## in production, CI, or any environment where untrusted input could influence
## the pattern-learning prompt.
feedback-loop = []

[dependencies]
mc-core = { path = "../mc-core" }
mc-kernel = { path = "../mc-kernel" }
mc-trace = { path = "../mc-trace" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
