[package]
name = "mc-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust SDK with embedded kernel for Mission Clearance"

[features]
default = []
feedback-loop = ["mc-policy/feedback-loop", "mc-api/feedback-loop"]

[dependencies]
mc-core = { path = "../mc-core" }
mc-kernel = { path = "../mc-kernel" }
mc-policy = { path = "../mc-policy" }
mc-vault = { path = "../mc-vault" }
mc-trace = { path = "../mc-trace" }
mc-api = { path = "../mc-api" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
