[package]
name = "mc-trace"
version.workspace = true
edition.workspace = true

[dependencies]
mc-core = { path = "../mc-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
tracing.workspace = true
